# MOON

./: .env.example  .gitignore  BOOTSTRAP_GUIDE.md  CODE_OF_CONDUCT.md  CONTEXT_ENGINE_RESEARCH.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIP260221.md  MIP260221_lilac.md  README.md  SECURITY.md  SKILL.md  SKILL_SUBAGENT.md  TECHNICAL_REVISION_REQUEST.md  audit_report.md  build.rs  clippy_report.txt  implement-plan.md  implementation_plan.md  mip-lanceDB.md  mip20260226.md  mip20260228.md  mip_search_followups.md  moon.toml.example  moon_recall_failure_report_0539.md  upgrade_implementation_plan.md
.github/workflows/: ci.yml
assets/plugin/: README.md  index.js  openclaw.plugin.json  package.json
deploy/launchd/: moon-system.plist.template
deploy/systemd/: moon-system.service
docs/: contracts.md  failure_policy.md  runbook.md  security_checklist.md
scripts/: guard_no_hardcoding.sh
src/: cli.rs  env_loader.rs  error.rs  logging.rs  main.rs
src/commands/: install.rs  mod.rs  moon_config.rs  moon_distill.rs  moon_embed.rs  moon_health.rs  moon_index.rs  moon_recall.rs  moon_snapshot.rs  moon_status.rs  moon_stop.rs  moon_watch.rs  post_upgrade.rs  repair.rs  status.rs  verify.rs
src/moon/: archive.rs  audit.rs  channel_archive_map.rs  config.rs  continuity.rs  distill.rs  embed.rs  inbound_watch.rs  (+12 more)
tests/: config_patch_test.rs  failure_path_test.rs  idempotency_test.rs  install_flow_test.rs  moon_embed_test.rs  moon_health_test.rs  moon_index_test.rs  moon_recall_test.rs  moon_snapshot_test.rs  moon_stop_test.rs  moon_watch_test.rs  post_upgrade_test.rs
(+3 files in other folders)
